--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34",
+    "typeorm-naming-strategies": "^2.0.0",
     "typeorm-seeding": "^1.6.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
