--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.1",
     "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.34",
     "typeorm-naming-strategies": "^2.0.0",
