--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint": "eslint",
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -82,6 +82,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.0",
     "jest": "27.1.0",
+    "lint-staged": "^11.2.6",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
@@ -107,5 +108,12 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "yarn lint",
+      "yarn format",
+      "git add ."
+    ]
   }
 }
