--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,14 @@ SYSTEM_LOG_INFO=
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRES=
 
-
+# Refresh token variables (Expiration time should in second, ex: 30 = 30 seconds)
+REFRESH_TOKEN_SECRET=
+REFRESH_TOKEN_EXPIRES=
 
 # Bcrypt salt rounds
 BCRYPT_SALT_ROUND=
+
+# Cloudinary parameters
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
