--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
     "bcrypt": "^5.0.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cloudinary": "^1.27.1",
     "dotenv": "^10.0.0",
     "express-basic-auth": "^1.2.0",
     "faker": "^5.5.3",
@@ -69,9 +71,11 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/buffer-to-stream": "^1.0.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.7",
     "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
