feat(NM-49): added message system

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
+    "@sendgrid/mail": "^7.6.0",
     "awesome-phonenumber": "^2.64.0",
     "bcrypt": "^5.0.1",
     "buffer-to-stream": "^1.0.0",
@@ -51,9 +52,11 @@
     "faker": "^5.5.3",
     "logform": "^2.2.0",
     "mysql": "^2.18.1",
+    "nestjs-real-ip": "^2.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -74,6 +77,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/buffer-to-stream": "^1.0.0",
+    "@types/crypto-js": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/faker": "^5.5.7",
     "@types/jest": "^27.0.1",
@@ -81,6 +85,7 @@
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/randomstring": "^1.1.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
